--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev-start": "nodemon index.js",
-    "test": "eslint . && jest --coverage",
+    "test": "eslint . --fix && jest --coverage --detectOpenHandles --forceExit --runInBand",
     "testWatch": "jest --coverage --watchAll",
     "test-nolint": "jest --coverage --detectOpenHandles --forceExit --runInBand",
-    "test-logs":  "jest --coverage --detectOpenHandles --runInBand",
+    "test-logs": "jest --coverage --detectOpenHandles --runInBand",
     "lint": "eslint .",
     "dbon": "mkdir -p ./db && mongod --dbpath ./db",
     "dboff": "killall mongod",
